--- a/decision tree classifier.ipynb
+++ b/decision tree classifier.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "id": "ot8RsUkAR87V"
    },
@@ -22,13 +22,12 @@
     "\n",
     "csv_url = \"./data/Traffic_Violations.csv\"\n",
     "##csv_url = \"https://data.montgomerycountymd.gov/api/views/4mse-ku6q/rows.csv?accessType=DOWNLOAD\"\n",
-    "# Load the CSV data into a Pandas DataFrame\n",
     "df = pd.read_csv(csv_url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +78,7 @@
        " 'Geolocation']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,99 +89,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Description\n",
-       "DRIVER FAILURE TO STOP AT STEADY CIRCULAR RED SIGNAL                                                 21716\n",
-       "DRIVER FAIL TO STOP AT FLASHING RED TRAFFIC SIGNAL STOP LINE                                         18277\n",
-       "DRIVER FAIL TO STOP AT RED TRAFFIC SIGNAL BEFORE RIGHT TURN                                           8121\n",
-       "DRIVER FAIL TO STOP AT STEADY RED ARROW SIGNAL                                                        4290\n",
-       "DRIVER FAIL TO STOP AT STEADY CIRCULAR RED SIGNAL                                                     1981\n",
-       "DRIVER FAIL TO STOP AT STEADY CIRCULAR RED SIGNAL OR AT STEADY RED ARROW SIGNAL                        585\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN                                                  295\n",
-       "DRIVER FAIL TO STOP AT RED TRAFFIC SIGNAL BEFORE ANY OTHER TURN                                        216\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN, MAKING IMPROPER LEFT TURN AT RED SIGNAL         212\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN AT RED SIGNAL                                     11\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN,                                                   8\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN.                                                   6\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE MAKING IMPROPER LEFT TURN AT RED SIGNAL                      3\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE MAKING IMPROPER LEFT TURN AT RED SIGNAL)                     2\n",
-       "DRIVER FAILING TO STOP AT FLASHING RED SIGNAL BEFORE LEFT TURN                                           1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN AT RED SIGNAL)                                     1\n",
-       "DRIVER fAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN, MAKING IMPROPER LEFT TURN AT RED SIGNAL)          1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN MAKING IMPROPER LEFT TURN AT RED SIGNAL            1\n",
-       "DRIVER FAIL TO MAKE REQUIRED STOP AT FLASHING RED SIGNAL                                                 1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN, MAKING                                            1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN AT RED SIGNA                                       1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE MAKING  LEFT TURN AT RED SIGNAL                              1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL                                                                     1\n",
-       "DRIVER FAILURE TO STOP AT RED SIGNAL BEFORE LEFT TURN                                                    1\n",
-       "DRIVER FAILING TO STOP AT REDSTOP  TURN LEFT AT RED SIGNAL)                                              1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE U TURN                                                       1\n",
-       "DRIVER  FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN, MAKING IMPROPER LEFT TURN AT RED SIGNAL          1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL  MAKING IMPROPER LEFT TURN AT RED SIGNAL                            1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN LEFT TURN AT RED SIGNAL                            1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN  AT RED SIGNAL)                                    1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN, MAKING IMPROPER LEFT TURN AT RED SIGNAL)          1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN AND MAKING IMPROPER LEFT TURN AT RED SIGNAL        1\n",
-       "DRIVER FAIL TO MAKE REQUIRED STOP AT RED FLASHING SIGNAL,                                                1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT TURN, MAKING IMPROPER LEFT TURN                         1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE LEFT                                                         1\n",
-       "DRIVER FAILING TO STOP AT RED SIGNAL BEFORE MAKING LEFT TURN AT RED SIGNAL                               1\n",
-       "Name: count, dtype: int64"
+       "Date Of Stop              0\n",
+       "Time Of Stop              0\n",
+       "Agency                    0\n",
+       "SubAgency                 0\n",
+       "Description              10\n",
+       "Location                  4\n",
+       "Latitude                  0\n",
+       "Longitude                 0\n",
+       "Accident                  0\n",
+       "Belts                     0\n",
+       "Personal Injury           0\n",
+       "Property Damage           0\n",
+       "Fatal                     0\n",
+       "Commercial License        0\n",
+       "Commercial Vehicle        0\n",
+       "Alcohol                   0\n",
+       "Work Zone                 0\n",
+       "State                    59\n",
+       "VehicleType               0\n",
+       "Year                  10375\n",
+       "Make                     68\n",
+       "Model                   213\n",
+       "Color                 21654\n",
+       "Violation Type            0\n",
+       "Race                      0\n",
+       "Gender                    0\n",
+       "Driver City             474\n",
+       "Driver State             11\n",
+       "DL State                929\n",
+       "Geolocation               0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# The dataset being used contains all traffic violations\n",
-    "# Keywords a crucial for determining the type of violation\n",
-    "# I used the unique to find the feature values in description\n",
-    "# My initial stratagy for finding these keywords is by using ctrl+f on notepad++ and searching for red and stop\n",
-    "df_filtered = df[df['Description'].str.contains(' stop ', case=False) &\n",
-    "                               df['Description'].str.contains(' red ', case=False) &\n",
-    "                               df['Description'].str.contains(' fail', case=False)]\n",
-    "df_filtered['Description'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Location',\n",
-       " 'Latitude',\n",
-       " 'Longitude',\n",
-       " 'Accident',\n",
-       " 'Belts',\n",
-       " 'Personal Injury',\n",
-       " 'Property Damage',\n",
-       " 'Fatal',\n",
-       " 'Alcohol',\n",
-       " 'Work Zone',\n",
-       " 'State',\n",
-       " 'VehicleType',\n",
-       " 'Year',\n",
-       " 'Make',\n",
-       " 'Model',\n",
-       " 'Color',\n",
-       " 'Race',\n",
-       " 'Gender',\n",
-       " 'DL State',\n",
-       " 'Geolocation']"
-      ]
-     },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,181 +138,203 @@
     "# Some columns I removed here like longitude may make a nice visual for later\n",
     "columns_to_drop = [\n",
     "        'SeqID',\n",
-    "        'Agency',\n",
-    "        'SubAgency',\n",
-    "        'Commercial License',\n",
     "        'HAZMAT',\n",
-    "        'Commercial Vehicle',\n",
     "        'Search Conducted',\n",
     "        'Search Disposition',\n",
     "        'Search Outcome',\n",
     "        'Search Type',\n",
     "        'Article',\n",
     "        'Contributed To Accident',\n",
-    "        'Driver City',\n",
-    "        'Driver State',\n",
     "        'Arrest Type',\n",
-    "        'Violation Type',\n",
-    "        'SeqID',\n",
     "        'Search Reason',\n",
     "        'Search Reason For Stop',\n",
     "        'Charge',\n",
-    "        'Search Arrest Reason',\n",
-    "        'Date Of Stop',\n",
-    "        'Time Of Stop',\n",
-    "    'Description']\n",
+    "        'Search Arrest Reason']\n",
     "\n",
     "\n",
     "# Drop the specified columns\n",
-    "df_filtered = df.drop(columns=columns_to_drop, errors='ignore')\n",
-    "list(df_filtered)"
+    "df.drop(columns=columns_to_drop, errors='ignore', inplace=True)\n",
+    "df.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Check the features here for colums that may be useful\n",
-    "# Unique entries are a good way to get an idea of what the features mean \n",
-    "#df_filtered['Date Of Stop'].value_counts()"
+    "df.dropna(subset=['Description'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1879912 entries, 0 to 1879911\n",
-      "Data columns (total 20 columns):\n",
-      " #   Column           Dtype  \n",
-      "---  ------           -----  \n",
-      " 0   Location         object \n",
-      " 1   Latitude         float64\n",
-      " 2   Longitude        float64\n",
-      " 3   Accident         object \n",
-      " 4   Belts            object \n",
-      " 5   Personal Injury  object \n",
-      " 6   Property Damage  object \n",
-      " 7   Fatal            object \n",
-      " 8   Alcohol          object \n",
-      " 9   Work Zone        object \n",
-      " 10  State            object \n",
-      " 11  VehicleType      object \n",
-      " 12  Year             float64\n",
-      " 13  Make             object \n",
-      " 14  Model            object \n",
-      " 15  Color            object \n",
-      " 16  Race             object \n",
-      " 17  Gender           object \n",
-      " 18  DL State         object \n",
-      " 19  Geolocation      object \n",
-      "dtypes: float64(3), object(17)\n",
-      "memory usage: 286.9+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_filtered.info()"
+    "def replace_description_with_most_frequent_value(df, keywords, field):\n",
+    "    filtered_rows=df\n",
+    "    for keyword in keywords:\n",
+    "        filtered_rows = filtered_rows[filtered_rows[field].str.contains(keyword, case=False)]\n",
+    "\n",
+    "    if not filtered_rows.empty:\n",
+    "        most_frequent_value = filtered_rows[field].mode().iloc[0]\n",
+    "        df.loc[filtered_rows.index, field] = most_frequent_value"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 1857187 entries, 0 to 1879911\n",
-      "Data columns (total 20 columns):\n",
-      " #   Column           Dtype  \n",
-      "---  ------           -----  \n",
-      " 0   Location         object \n",
-      " 1   Latitude         float64\n",
-      " 2   Longitude        float64\n",
-      " 3   Accident         object \n",
-      " 4   Belts            object \n",
-      " 5   Personal Injury  object \n",
-      " 6   Property Damage  object \n",
-      " 7   Fatal            object \n",
-      " 8   Alcohol          object \n",
-      " 9   Work Zone        object \n",
-      " 10  State            object \n",
-      " 11  VehicleType      object \n",
-      " 12  Year             float64\n",
-      " 13  Make             object \n",
-      " 14  Model            object \n",
-      " 15  Color            object \n",
-      " 16  Race             object \n",
-      " 17  Gender           object \n",
-      " 18  DL State         object \n",
-      " 19  Geolocation      object \n",
-      "dtypes: float64(3), object(17)\n",
-      "memory usage: 297.6+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_filtered.dropna(inplace=True)\n",
-    "df_filtered.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Race\n",
-       "WHITE              632776\n",
-       "BLACK              589878\n",
-       "HISPANIC           411268\n",
-       "OTHER              114611\n",
-       "ASIAN              105306\n",
-       "NATIVE AMERICAN      3348\n",
+       "Fatal\n",
+       "No     1879404\n",
+       "Yes        498\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Data contains more white race and black\n",
-    "#Conclusion cannot be drawn as the area data is being collected from may have more\n",
-    "#White and black individuals compared to other races\n",
-    "#Which over represents a race\n",
-    "df_filtered['Race'].value_counts()"
+    "df['Fatal'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soonest Date: 01/01/2012\n",
+      "Oldest Date: 12/31/2022\n"
+     ]
+    }
+   ],
+   "source": [
+    "soonest_date = df['Date Of Stop'].min()\n",
+    "oldest_date = df['Date Of Stop'].max()\n",
+    "\n",
+    "print(\"Soonest Date:\", soonest_date)\n",
+    "print(\"Oldest Date:\", oldest_date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\ishaq\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('punkt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Gender\n",
-       "M    1250305\n",
-       "F     604051\n",
-       "U       2831\n",
+       "Description\n",
+       "DRIVER FAILURE TO OBEY PROPERLY PLACED TRAFFIC CONTROL DEVICE INSTRUCTIONS                     156937\n",
+       "FAILURE TO DISPLAY REGISTRATION CARD UPON DEMAND BY POLICE OFFICER                              84442\n",
+       "DRIVING VEHICLE ON HIGHWAY WITH SUSPENDED REGISTRATION                                          55131\n",
+       "FAILURE OF INDIVIDUAL DRIVING ON HIGHWAY TO DISPLAY LICENSE TO UNIFORMED POLICE ON DEMAND       49804\n",
+       "DISPLAYING EXPIRED REGISTRATION PLATE ISSUED BY ANY STATE                                       47429\n",
+       "                                                                                                ...  \n",
+       "DRIVING VEH W/ TV-TYPE RECEIVING EQUIPTHAT IS ON AND VISIBLE TO THE DRIVER)ON HWY                   1\n",
+       "DRIVING VEHICLE IN EXCESS OF REASONABLE AND PRUDENT SPEED ON HIGHWAY 66/40 ZONE                     1\n",
+       "PARKING VEH. LEFT WHEELS TO CURB                                                                    1\n",
+       "DRIVE, ATTEMPT TO DRIVE VEH. WHILE IMPAIRED BY DRUG OR DRUG AND ALCOHOL WHILE TRANSP. MINOR         1\n",
+       "OPERATE MOTOR VEH ON HWY WITHOUT REQUIRED STOP LAMP                                                 1\n",
+       "Name: count, Length: 16361, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Description'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from itertools import combinations\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "df['Tokens'] = df['Description'].str.split()\n",
+    "\n",
+    "def common_words(desc1, desc2, min_common_words):\n",
+    "    common = set(desc1) & set(desc2)\n",
+    "    if len(common) >= min_common_words:\n",
+    "        return ' '.join(common)\n",
+    "    else:\n",
+    "        return ' '.join(desc1)\n",
+    "\n",
+    "combinations = list(combinations(df['Tokens'], 2))\n",
+    "min_common_words = 3\n",
+    "\n",
+    "for desc1, desc2 in combinations:\n",
+    "    common = common_words(desc1, desc2, min_common_words)\n",
+    "    if common:\n",
+    "        df['Description'] = df['Description'].str.replace(f\"{' '.join(desc1)}|{' '.join(desc2)}\", common)\n",
+    "\n",
+    "df.drop(columns=['Tokens'], inplace=True)\n",
+    "\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Description\n",
+       "A description with some words here.    1\n",
+       "A different description.               1\n",
+       "A unique text.                         1\n",
+       "Some words in this description.        1\n",
        "Name: count, dtype: int64"
       ]
      },
@@ -376,15 +344,8 @@
     }
    ],
    "source": [
-    "df_filtered['Gender'].value_counts()"
+    "df['Description'].value_counts()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
