--- a/imputer.ipynb
+++ b/imputer.ipynb
@@ -37,77 +37,77 @@
     "        'Search Arrest Reason']\n",
     "\n",
     "# Drop the specified columns\n",
-    "df.drop(columns=columns_to_drop, errors='ignore', inplace=True)"
+    "df.drop(columns=columns_to_drop, errors='ignore', inplace=True)\n",
+    "df.dropna(subset=['Description'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Date Of Stop          0\n",
-       "Year_Stop             0\n",
-       "Geolocation           0\n",
-       "DL State              0\n",
-       "Driver State          0\n",
-       "Driver City           0\n",
-       "Gender                0\n",
-       "Race                  0\n",
-       "Violation Type        0\n",
-       "Color                 0\n",
-       "Model                 0\n",
-       "Make                  0\n",
-       "Year                  0\n",
-       "VehicleType           0\n",
-       "State                 0\n",
-       "Month_Stop            0\n",
-       "Work Zone             0\n",
-       "Commercial Vehicle    0\n",
-       "Commercial License    0\n",
-       "Fatal                 0\n",
-       "Property Damage       0\n",
-       "Personal Injury       0\n",
-       "Belts                 0\n",
-       "Accident              0\n",
-       "Longitude             0\n",
-       "Latitude              0\n",
-       "Location              0\n",
-       "Description           0\n",
-       "SubAgency             0\n",
-       "Agency                0\n",
-       "Time Of Stop          0\n",
-       "Alcohol               0\n",
-       "Day_Stop              0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date Of Stop          0\n",
+      "Year_Stop             0\n",
+      "Geolocation           0\n",
+      "DL State              0\n",
+      "Driver State          0\n",
+      "Driver City           0\n",
+      "Gender                0\n",
+      "Race                  0\n",
+      "Violation Type        0\n",
+      "Color                 0\n",
+      "Model                 0\n",
+      "Make                  0\n",
+      "Year                  0\n",
+      "VehicleType           0\n",
+      "State                 0\n",
+      "Month_Stop            0\n",
+      "Work Zone             0\n",
+      "Commercial Vehicle    0\n",
+      "Commercial License    0\n",
+      "Fatal                 0\n",
+      "Property Damage       0\n",
+      "Personal Injury       0\n",
+      "Belts                 0\n",
+      "Accident              0\n",
+      "Longitude             0\n",
+      "Latitude              0\n",
+      "Description           0\n",
+      "SubAgency             0\n",
+      "Agency                0\n",
+      "Time Of Stop          0\n",
+      "Alcohol               0\n",
+      "Day_Stop              0\n",
+      "Location              4\n",
+      "dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
+    "import pandas as pd\n",
     "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer\n",
     "\n",
-    "\n",
-    "\n",
-    "label_encoder = LabelEncoder()\n",
-    "for col in ['VehicleType', 'Make', 'Model', 'Color', 'State','Description','Location','Driver State','DL State','Driver City']:\n",
-    "    df[col] = label_encoder.fit_transform(df[col])\n",
+    "categorical_cols = ['VehicleType', 'Make', 'Model', 'Color', 'State', 'Driver State', 'DL State', 'Driver City']\n",
     "\n",
     "df['Date Of Stop'] = pd.to_datetime(df['Date Of Stop'])\n",
     "df['Year_Stop'] = df['Date Of Stop'].dt.year\n",
     "df['Month_Stop'] = df['Date Of Stop'].dt.month\n",
     "df['Day_Stop'] = df['Date Of Stop'].dt.day\n",
+    "\n",
     "year_imputer = IterativeImputer(max_iter=10, random_state=0)\n",
     "df['Year'] = year_imputer.fit_transform(df[['Year']])\n",
     "\n",
-    "df.isna().sum().sort_values()"
+    "for col in categorical_cols:\n",
+    "    most_frequent_value = df[col].mode()[0]  \n",
+    "    df[col].fillna(most_frequent_value, inplace=True)\n",
+    "\n",
+    "missing_values = df.isna().sum().sort_values()\n",
+    "print(missing_values)\n"
    ]
   },
   {
@@ -120,7 +120,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1879912 entries, 0 to 1879911\n",
+      "Index: 1879902 entries, 0 to 1879911\n",
       "Data columns (total 33 columns):\n",
       " #   Column              Dtype         \n",
       "---  ------              -----         \n",
@@ -128,8 +128,8 @@
       " 1   Time Of Stop        object        \n",
       " 2   Agency              object        \n",
       " 3   SubAgency           object        \n",
-      " 4   Description         int32         \n",
-      " 5   Location            int32         \n",
+      " 4   Description         object        \n",
+      " 5   Location            object        \n",
       " 6   Latitude            float64       \n",
       " 7   Longitude           float64       \n",
       " 8   Accident            object        \n",
@@ -141,24 +141,24 @@
       " 14  Commercial Vehicle  object        \n",
       " 15  Alcohol             object        \n",
       " 16  Work Zone           object        \n",
-      " 17  State               int32         \n",
-      " 18  VehicleType         int32         \n",
+      " 17  State               object        \n",
+      " 18  VehicleType         object        \n",
       " 19  Year                float64       \n",
-      " 20  Make                int32         \n",
-      " 21  Model               int32         \n",
-      " 22  Color               int32         \n",
+      " 20  Make                object        \n",
+      " 21  Model               object        \n",
+      " 22  Color               object        \n",
       " 23  Violation Type      object        \n",
       " 24  Race                object        \n",
       " 25  Gender              object        \n",
-      " 26  Driver City         int32         \n",
-      " 27  Driver State        int32         \n",
-      " 28  DL State            int32         \n",
+      " 26  Driver City         object        \n",
+      " 27  Driver State        object        \n",
+      " 28  DL State            object        \n",
       " 29  Geolocation         object        \n",
       " 30  Year_Stop           int32         \n",
       " 31  Month_Stop          int32         \n",
       " 32  Day_Stop            int32         \n",
-      "dtypes: datetime64[ns](1), float64(3), int32(13), object(16)\n",
-      "memory usage: 380.1+ MB\n"
+      "dtypes: datetime64[ns](1), float64(3), int32(3), object(26)\n",
+      "memory usage: 466.1+ MB\n"
      ]
     }
    ],
@@ -168,7 +168,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\ishaq\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "import string\n",
+    "from nltk.corpus import stopwords\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "def remove_stopwords(text):\n",
+    "    stop_words = set(stopwords.words('english'))\n",
+    "    translator = str.maketrans('', '', string.punctuation) \n",
+    "    tokens = text.lower().translate(translator).split()\n",
+    "    filtered_tokens = [word for word in tokens if word not in stop_words]\n",
+    "    return ' '.join(filtered_tokens)\n",
+    "\n",
+    "df['Description'] = df['Description'].apply(remove_stopwords)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date Of Stop', 'Time Of Stop', 'Agency', 'SubAgency', 'Description',\n",
+       "       'Location', 'Latitude', 'Longitude', 'Accident', 'Belts',\n",
+       "       'Personal Injury', 'Property Damage', 'Fatal', 'Commercial License',\n",
+       "       'Commercial Vehicle', 'Alcohol', 'Work Zone', 'State', 'VehicleType',\n",
+       "       'Year', 'Make', 'Model', 'Color', 'Violation Type', 'Race', 'Gender',\n",
+       "       'Driver City', 'Driver State', 'DL State', 'Geolocation', 'Year_Stop',\n",
+       "       'Month_Stop', 'Day_Stop'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
