add feature reduction, engineering and smote

--- a/scripts/filter_cd_asos.ipynb
+++ b/scripts/filter_cd_asos.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ishaq\\AppData\\Local\\Temp\\ipykernel_14944\\2772694711.py:7: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ishaq\\AppData\\Local\\Temp\\ipykernel_15244\\2772694711.py:7: DtypeWarning: Columns (26) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(csv_filename)\n"
      ]
     }
@@ -1426,7 +1426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1629,19 +1629,19 @@
        "[102961 rows x 9 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.rename(columns={'data_hour': 'DATE'}, inplace=True)\n",
+    "filled_df.rename(columns={'date_hour': 'DATE'}, inplace=True)\n",
     "filled_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
